feat: customer can get product detail
